--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -57,7 +57,7 @@ test:
 
 about:
   home: https://CRAN.R-project.org/package=qpcR
-  license: GPL-2.0-only
+  license: GPL-2.0-or-later
   summary: Model fitting, optimal model selection and calculation of various features that are essential in the analysis of quantitative real-time polymerase chain reaction (qPCR).
   license_family: GPL2
   license_file:
